--- a/CleanUpPhotos/CleanUpPhotos/Readme/readme.html
+++ b/CleanUpPhotos/CleanUpPhotos/Readme/readme.html
@@ -180,7 +180,7 @@ You can find this program and other DVD Profiler related programs under
 <h2><a name="Contact">Contact</a></h2>
 
 <p>
-<a href="mailto:Karsten@yajirobi.de" target="_blank">Karsten@yajirobi.de</a>
+<a href="mailto:profiler_plugins@doena-soft.de.de" target="_blank">profiler_plugins@doena-soft.de.de</a>
 </p>
 <p><a href="#TOC">Table of Contents</a></p>
 
